<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55555555" >

    <TextView
        android:id="@+id/photograph"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/line"
        android:background="@drawable/setting_up_selector"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="@color/dark_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/albums"
        android:background="@color/dark_gray" />

    <TextView
        android:id="@+id/albums"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/cancel_pic"
        android:background="@drawable/setting_down_selector"
        android:gravity="center"
        android:text="@string/from_photo_album"
        android:textColor="@color/dark_gray"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_above="@+id/cancel_pic"
        android:background="@color/dark_gray" />

    <LinearLayout
        android:id="@+id/cancel_pic"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/setting_one_selector" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/dark_gray"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>