<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".MainActivity">

    <com.chaychan.uikit.NoScrollViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/mj_common_line"/>
        <com.chaychan.library.BottomBarLayout
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            >
            <com.chaychan.library.BottomBarItem
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:iconNormal="@mipmap/home_icon"
                app:iconSelected="@mipmap/home_icon_select"
                app:itemText="@string/MAIN_TAB_INDEX"
                app:itemTextSize="10sp"
                app:textColorNormal="@color/color_515051"
                app:textColorSelected="@color/color_D33D3C"
                app:itemMarginTop="0dp"
                app:openTouchBg="false"
                app:touchDrawable="@drawable/selector_bottom_tab"
                />


            <com.chaychan.library.BottomBarItem
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:iconNormal="@mipmap/found_icon"
                app:iconSelected="@mipmap/found_icon_select"
                app:itemText="@string/MAIN_TAB_FOUND"
                app:itemTextSize="10sp"
                app:textColorNormal="@color/color_515051"
                app:textColorSelected="@color/color_D33D3C"
                app:itemMarginTop="0dp"
                app:openTouchBg="false"
                app:touchDrawable="@drawable/selector_bottom_tab"
                />

            <com.chaychan.library.BottomBarItem
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:iconNormal="@mipmap/shop_icon"
                app:iconSelected="@mipmap/shop_icon_select"
                app:itemText="@string/MAIN_TAB_SHOP"
                app:itemTextSize="10sp"
                app:textColorNormal="@color/color_515051"
                app:textColorSelected="@color/color_D33D3C"
                app:itemMarginTop="0dp"
                app:openTouchBg="false"
                app:touchDrawable="@drawable/selector_bottom_tab"
                />

            <com.chaychan.library.BottomBarItem
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:iconNormal="@mipmap/me_icon"
                app:iconSelected="@mipmap/me_icon_select"
                app:itemText="@string/MAIN_TAB_MY"
                app:itemTextSize="10sp"
                app:textColorNormal="@color/color_515051"
                app:textColorSelected="@color/color_D33D3C"
                app:itemMarginTop="0dp"
                app:openTouchBg="false"
                app:touchDrawable="@drawable/selector_bottom_tab"
                />
        </com.chaychan.library.BottomBarLayout>
    </LinearLayout>
